# Autopilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  cloudbuild.yaml  deploy_test.sh  pyproject.toml  requirements.txt  ruff.toml  stop_watch.py  test_func.py  test_liq.py  test_liq2.py  test_liq3.py  test_liq4.py  test_liq_ws.py  test_real_world.py  test_union.py
.agent/rules/: event_driven_webhooks.md  pre_commit_lint.md  rules.md  venv_execution.md
.agent/workflows/: create_new_workflow.md  deploy_to_cloud_run.md  dry_run_btc_trader.md  e2e_bank_to_ynab.md
.github/workflows/: ci.yml
autopilot/: __init__.py  base_workflow.py  cli.py  config.py  config_loader.py  errors.py  logging.py  models.py  observability.py  registry.py  router.py  version.py
autopilot/agents/: __init__.py  agent_cards.py  base.py  callbacks.py  context_cache.py  copilot.py  guardrails.py  json_utils.py  pipeline_runner.py  rate_limiter.py  tool_callbacks.py
autopilot/api/: errors.py  middleware.py  security.py  system.py  webhooks.py
autopilot/auth/: api_security.py
autopilot/connectors/: __init__.py  airtable_connector.py  base_connector.py  binance_feed.py  gmail_connector.py  polymarket_connector.py  pubsub_connector.py  registry.py  telegram_connector.py  todoist_connector.py  ynab_connector.py
autopilot/core/: __init__.py  _artifact_persist.py  adk_runner.py  agent.py  artifact.py  (+18 more)
docs/: ALPHA_HARVESTER_IMPLEMENTATION.md  API_REFERENCE.md  ARCHITECTURE.md  ARCHITECTURE_V3_PLAN.md  WORKFLOW_DEVELOPMENT.md
scripts/: run_e2e_bank_to_ynab.py  run_polymarket_dry_run.py  run_polymarket_live_monitor.py
tests/: conftest.py  test_a2a.py  test_api_v1.py  test_api_v1_endpoints.py  test_api_v1_integration.py  test_base_workflow.py  test_cors.py  test_registry.py  test_router.py
workflows/: __init__.py
(+123 files in other folders)
